fixed #93 file split issue

--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "9fcf6586-639e-4b45-8dfd-671f724c766f",
    "metadata": {
     "tags": []
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "4bb6b22b-52f4-49df-9745-35dd53dccfbf",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "ff84103b-5354-4d35-b3df-70ba8f58cbd7",
    "metadata": {
     "tags": []
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "cee0e008-c9b3-460a-990e-2716ea5483b2",
    "metadata": {
     "tags": []
@@ -355,7 +355,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "9cffb270-0cb5-4f84-83ea-e8f195dae0fc",
    "metadata": {
     "tags": []
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "bad7ee0b-7318-4a2f-a681-81bac98547f5",
    "metadata": {
     "tags": []
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "09bf8897-5807-4899-bf48-4dfbdfcca7fb",
    "metadata": {
     "tags": []
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "474b25b9-c0cd-4cfb-bb34-f2e5a0eb5069",
    "metadata": {
     "tags": []
@@ -505,14 +505,26 @@
      "output_type": "stream",
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
-      "Deleting the folder:  uptrain_logs\n",
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8502\n",
-      "  Network URL: http://192.168.6.64:8502\n",
-      "\n",
-      "Drift detected with DDM at time: 111298!!!\n"
+      "Deleting the folder:  uptrain_logs\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32my:\\00_HUSTLE\\DEVELOPMENT\\uptrain\\examples\\fraud_detection\\run.ipynb Cell 19\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/y%3A/00_HUSTLE/DEVELOPMENT/uptrain/examples/fraud_detection/run.ipynb#X24sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# Attach ground truth to corresponding predictions \u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/y%3A/00_HUSTLE/DEVELOPMENT/uptrain/examples/fraud_detection/run.ipynb#X24sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# in UpTrain framework and identify concept drift\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/y%3A/00_HUSTLE/DEVELOPMENT/uptrain/examples/fraud_detection/run.ipynb#X24sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m ground_truth \u001b[39m=\u001b[39m y_test[i\u001b[39m*\u001b[39mbatch_size:(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m*\u001b[39mbatch_size] \n\u001b[1;32m---> <a href='vscode-notebook-cell:/y%3A/00_HUSTLE/DEVELOPMENT/uptrain/examples/fraud_detection/run.ipynb#X24sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m framework\u001b[39m.\u001b[39;49mlog(identifiers\u001b[39m=\u001b[39;49mids, gts\u001b[39m=\u001b[39;49mground_truth)\n\u001b[0;32m     <a href='vscode-notebook-cell:/y%3A/00_HUSTLE/DEVELOPMENT/uptrain/examples/fraud_detection/run.ipynb#X24sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m# Pausing between batches to monitor progress in the dashboard\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/y%3A/00_HUSTLE/DEVELOPMENT/uptrain/examples/fraud_detection/run.ipynb#X24sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m time\u001b[39m.\u001b[39msleep(\u001b[39m0.5\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\LUCKYLOKEY\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\uptrain\\core\\classes\\framework.py:399\u001b[0m, in \u001b[0;36mFramework.log\u001b[1;34m(self, inputs, outputs, gts, identifiers, extra)\u001b[0m\n\u001b[0;32m    396\u001b[0m     identifiers \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcheck_and_add_data(inputs, outputs)\n\u001b[0;32m    398\u001b[0m \u001b[39mif\u001b[39;00m gts \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 399\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mattach_ground_truth({\u001b[39m\"\u001b[39;49m\u001b[39mid\u001b[39;49m\u001b[39m\"\u001b[39;49m: identifiers, \u001b[39m\"\u001b[39;49m\u001b[39mgt\u001b[39;49m\u001b[39m\"\u001b[39;49m: gts})\n\u001b[0;32m    401\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mneed_retraining():\n\u001b[0;32m    402\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mretrain()\n",
+      "File \u001b[1;32mc:\\Users\\LUCKYLOKEY\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\uptrain\\core\\classes\\framework.py:333\u001b[0m, in \u001b[0;36mFramework.attach_ground_truth\u001b[1;34m(self, gt_data)\u001b[0m\n\u001b[0;32m    323\u001b[0m df_gt \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mloc[gt_id_indices]\n\u001b[0;32m    324\u001b[0m data \u001b[39m=\u001b[39m {\n\u001b[0;32m    325\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mzip\u001b[39m(\n\u001b[0;32m    326\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfeat_name_list,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    331\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mgt\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mlist\u001b[39m(gt_data[\u001b[39m\"\u001b[39m\u001b[39mgt\u001b[39m\u001b[39m\"\u001b[39m]),\n\u001b[0;32m    332\u001b[0m }\n\u001b[1;32m--> 333\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcheck(data, extra_args\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mextra_args)\n\u001b[0;32m    334\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msmartly_add_data(data, extra_args\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mextra_args)\n",
+      "File \u001b[1;32mc:\\Users\\LUCKYLOKEY\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\uptrain\\core\\classes\\framework.py:217\u001b[0m, in \u001b[0;36mFramework.check\u001b[1;34m(self, data, extra_args)\u001b[0m\n\u001b[0;32m    215\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcheck\u001b[39m(\u001b[39mself\u001b[39m, data, extra_args\u001b[39m=\u001b[39m{}):\n\u001b[0;32m    216\u001b[0m     extra_args\u001b[39m.\u001b[39mupdate({\u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m: data[\u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m]})\n\u001b[1;32m--> 217\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcheck_manager\u001b[39m.\u001b[39;49mcheck(\n\u001b[0;32m    218\u001b[0m         data[\u001b[39m\"\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m    219\u001b[0m         data[\u001b[39m\"\u001b[39;49m\u001b[39moutput\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m    220\u001b[0m         gts\u001b[39m=\u001b[39;49mdata[\u001b[39m\"\u001b[39;49m\u001b[39mgt\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m    221\u001b[0m         extra_args\u001b[39m=\u001b[39;49mextra_args,\n\u001b[0;32m    222\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\LUCKYLOKEY\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\uptrain\\core\\classes\\managers\\check_manager.py:105\u001b[0m, in \u001b[0;36mCheckManager.check\u001b[1;34m(self, inputs, outputs, gts, extra_args)\u001b[0m\n\u001b[0;32m    103\u001b[0m \u001b[39mfor\u001b[39;00m anomaly \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39manomalies_to_check:\n\u001b[0;32m    104\u001b[0m     \u001b[39mif\u001b[39;00m anomaly\u001b[39m.\u001b[39mneed_ground_truth() \u001b[39m==\u001b[39m (gts[\u001b[39m0\u001b[39m] \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m):\n\u001b[1;32m--> 105\u001b[0m         anomaly\u001b[39m.\u001b[39;49mcheck(inputs, outputs, gts\u001b[39m=\u001b[39;49mgts, extra_args\u001b[39m=\u001b[39;49mextra_args)\n\u001b[0;32m    106\u001b[0m \u001b[39mfor\u001b[39;00m stats \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstatistics_to_check:\n\u001b[0;32m    107\u001b[0m     stats\u001b[39m.\u001b[39mcheck(inputs, outputs, gts\u001b[39m=\u001b[39mgts, extra_args\u001b[39m=\u001b[39mextra_args)\n",
+      "File \u001b[1;32mc:\\Users\\LUCKYLOKEY\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\uptrain\\core\\classes\\anomalies\\concept_drift.py:46\u001b[0m, in \u001b[0;36mConceptDrift.check\u001b[1;34m(self, inputs, outputs, gts, extra_args)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39macc_arr\u001b[39m.\u001b[39mappend(acc)\n\u001b[0;32m     43\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mavg_acc \u001b[39m=\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mavg_acc \u001b[39m*\u001b[39m (\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39macc_arr) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m+\u001b[39m acc) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(\n\u001b[0;32m     44\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39macc_arr\n\u001b[0;32m     45\u001b[0m )\n\u001b[1;32m---> 46\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlog_handler\u001b[39m.\u001b[39;49madd_scalars(\n\u001b[0;32m     47\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39mavg_accuracy\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m     48\u001b[0m     {\u001b[39m\"\u001b[39;49m\u001b[39mavg_accuracy\u001b[39;49m\u001b[39m\"\u001b[39;49m: \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mavg_acc},\n\u001b[0;32m     49\u001b[0m     \u001b[39mlen\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49macc_arr),\n\u001b[0;32m     50\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdashboard_name,\n\u001b[0;32m     51\u001b[0m )\n\u001b[0;32m     52\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(alert, \u001b[39mstr\u001b[39m):\n\u001b[0;32m     53\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog_handler\u001b[39m.\u001b[39madd_alert(\n\u001b[0;32m     54\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mModel Performance Degradation Alert 🚨\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     55\u001b[0m         alert,\n\u001b[0;32m     56\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdashboard_name\n\u001b[0;32m     57\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\LUCKYLOKEY\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\uptrain\\core\\classes\\logging\\log_handler.py:60\u001b[0m, in \u001b[0;36mLogHandler.add_scalars\u001b[1;34m(self, plot_name, dictn, count, dashboard_name)\u001b[0m\n\u001b[0;32m     58\u001b[0m os\u001b[39m.\u001b[39mmakedirs(plot_folder, exist_ok\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     59\u001b[0m dictn\u001b[39m.\u001b[39mupdate({\u001b[39m\"\u001b[39m\u001b[39mcount\u001b[39m\u001b[39m\"\u001b[39m: count})\n\u001b[1;32m---> 60\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mst_writer\u001b[39m.\u001b[39;49madd_scalars(dictn, plot_folder)\n",
+      "File \u001b[1;32mc:\\Users\\LUCKYLOKEY\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\uptrain\\core\\classes\\logging\\log_streamlit.py:38\u001b[0m, in \u001b[0;36mStreamlitLogs.add_scalars\u001b[1;34m(self, dict, folder)\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m     37\u001b[0m file_name \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(folder, key \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 38\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49misfile(file_name):\n\u001b[0;32m     39\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(file_name, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m, newline\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f_object:\n\u001b[0;32m     40\u001b[0m         writer \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mwriter(f_object)\n",
+      "File \u001b[1;32mc:\\Users\\LUCKYLOKEY\\AppData\\Local\\Programs\\Python\\Python310\\lib\\genericpath.py:30\u001b[0m, in \u001b[0;36misfile\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Test whether a path is a regular file\"\"\"\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 30\u001b[0m     st \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49mstat(path)\n\u001b[0;32m     31\u001b[0m \u001b[39mexcept\u001b[39;00m (\u001b[39mOSError\u001b[39;00m, \u001b[39mValueError\u001b[39;00m):\n\u001b[0;32m     32\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -524,8 +536,8 @@
     "for i in range(int(len(X_test)/batch_size)):\n",
     "    \n",
     "    # Do model prediction\n",
-    "    inputs = {\"feats\": X_test[i*batch_size:(i+1)*batch_size]}\n",
-    "    preds = classifier.predict(inputs[\"feats\"])\n",
+    "    inputs ={'data': {\"feats\": X_test[i*batch_size:(i+1)*batch_size]}}\n",
+    "    preds = classifier.predict(inputs['data'][\"feats\"])\n",
     "    \n",
     "    # Log model inputs and outputs to monitor concept drift\n",
     "    ids = framework.log(inputs=inputs, outputs=preds)\n",
@@ -599,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1322464e-0917-4f68-aa4c-214a9b6fa7c2",
    "metadata": {
     "tags": []
@@ -704,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "63118254-37a2-4ec0-9a9d-16a4c3e376d1",
    "metadata": {
     "tags": []
@@ -780,7 +792,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -794,11 +806,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5c9d59ef8fd7319b343529049cd41b7d67724075998fb85365859f5b386c072d"
+    "hash": "8e5977c3052561a792163fb4c7e85a10c6e6c887568c9fcb6af68af793a982d9"
    }
   }
  },
