--- a/examples/human_orientation_classification/run.ipynb
+++ b/examples/human_orientation_classification/run.ipynb
@@ -64,9 +64,56 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (1.13.1)\n",
+      "Collecting imgaug\n",
+      "  Downloading imgaug-0.4.0-py2.py3-none-any.whl (948 kB)\n",
+      "     ------------------------------------- 948.0/948.0 kB 12.0 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from torch) (4.3.0)\n",
+      "Collecting Shapely\n",
+      "  Downloading shapely-2.0.1-cp38-cp38-win_amd64.whl (1.4 MB)\n",
+      "     ---------------------------------------- 1.4/1.4 MB 29.4 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: Pillow in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from imgaug) (8.4.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from imgaug) (1.22.4)\n",
+      "Requirement already satisfied: six in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from imgaug) (1.15.0)\n",
+      "Requirement already satisfied: scipy in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from imgaug) (1.7.1)\n",
+      "Collecting scikit-image>=0.14.2\n",
+      "  Downloading scikit_image-0.19.3-cp38-cp38-win_amd64.whl (12.2 MB)\n",
+      "     --------------------------------------- 12.2/12.2 MB 23.3 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: imageio in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from imgaug) (2.22.1)\n",
+      "Requirement already satisfied: opencv-python in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from imgaug) (4.5.2.52)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from imgaug) (3.5.1)\n",
+      "Collecting PyWavelets>=1.1.1\n",
+      "  Downloading PyWavelets-1.4.1-cp38-cp38-win_amd64.whl (4.2 MB)\n",
+      "     ---------------------------------------- 4.2/4.2 MB 22.3 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: networkx>=2.2 in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from scikit-image>=0.14.2->imgaug) (2.8.7)\n",
+      "Collecting tifffile>=2019.7.26\n",
+      "  Downloading tifffile-2023.2.3-py3-none-any.whl (215 kB)\n",
+      "     ------------------------------------- 215.1/215.1 kB 12.8 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from scikit-image>=0.14.2->imgaug) (21.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->imgaug) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->imgaug) (0.10.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->imgaug) (4.28.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->imgaug) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\karthik\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from matplotlib->imgaug) (2.4.7)\n",
+      "Installing collected packages: tifffile, Shapely, PyWavelets, scikit-image, imgaug\n",
+      "Successfully installed PyWavelets-1.4.1 Shapely-2.0.1 imgaug-0.4.0 scikit-image-0.19.3 tifffile-2023.2.3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: There was an error checking the latest version of pip.\n"
+     ]
+    }
+   ],
    "source": [
-    "#!pip install torch imgaug"
+    "!pip install torch imgaug"
    ]
   },
   {
@@ -75,16 +122,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import subprocess\n",
@@ -778,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.9"
   },
   "vscode": {
    "interpreter": {
