Replacing jupyter files back to original

--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9fcf6586-639e-4b45-8dfd-671f724c766f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!pip install joblib"
+    "# !pip install xgboost streamlit"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4bb6b22b-52f4-49df-9745-35dd53dccfbf",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "from xgboost import XGBClassifier\n",
     "\n",
-    "from helper_funcs import download_dataset, pretty"
+    "from helper_funcs import download_dataset, pretty\n"
    ]
   },
   {
@@ -93,12 +93,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ff84103b-5354-4d35-b3df-70ba8f58cbd7",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data file exists. Skipping download.\n",
+      "NSL_KDD_binary.csv dataset prepared successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "data_file = \"NSL_KDD_binary.csv\"\n",
     "download_dataset(data_file)"
@@ -114,12 +123,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cee0e008-c9b3-460a-990e-2716ea5483b2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels for first few rows:\n",
+      "[0, 0, 1, 0, 0] \n",
+      "\n",
+      "Input features for first few rows:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration</th>\n",
+       "      <th>protocol_type</th>\n",
+       "      <th>service</th>\n",
+       "      <th>flag</th>\n",
+       "      <th>src_bytes</th>\n",
+       "      <th>dst_bytes</th>\n",
+       "      <th>land</th>\n",
+       "      <th>wrong_fragment</th>\n",
+       "      <th>urgent</th>\n",
+       "      <th>hot</th>\n",
+       "      <th>...</th>\n",
+       "      <th>dst_host_count</th>\n",
+       "      <th>dst_host_srv_count</th>\n",
+       "      <th>dst_host_same_srv_rate</th>\n",
+       "      <th>dst_host_diff_srv_rate</th>\n",
+       "      <th>dst_host_same_src_port_rate</th>\n",
+       "      <th>dst_host_srv_diff_host_rate</th>\n",
+       "      <th>dst_host_serror_rate</th>\n",
+       "      <th>dst_host_srv_serror_rate</th>\n",
+       "      <th>dst_host_rerror_rate</th>\n",
+       "      <th>dst_host_srv_rerror_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9</td>\n",
+       "      <td>491</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>150</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>44</td>\n",
+       "      <td>9</td>\n",
+       "      <td>146</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>255</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>232</td>\n",
+       "      <td>8153</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>199</td>\n",
+       "      <td>420</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   duration  protocol_type  service  flag  src_bytes  dst_bytes  land  \\\n",
+       "0         0              1       20     9        491          0     0   \n",
+       "1         0              2       44     9        146          0     0   \n",
+       "2         0              1       49     5          0          0     0   \n",
+       "3         0              1       24     9        232       8153     0   \n",
+       "4         0              1       24     9        199        420     0   \n",
+       "\n",
+       "   wrong_fragment  urgent  hot  ...  dst_host_count  dst_host_srv_count  \\\n",
+       "0               0       0    0  ...             150                  25   \n",
+       "1               0       0    0  ...             255                   1   \n",
+       "2               0       0    0  ...             255                  26   \n",
+       "3               0       0    0  ...              30                 255   \n",
+       "4               0       0    0  ...             255                 255   \n",
+       "\n",
+       "   dst_host_same_srv_rate  dst_host_diff_srv_rate  \\\n",
+       "0                    0.17                    0.03   \n",
+       "1                    0.00                    0.60   \n",
+       "2                    0.10                    0.05   \n",
+       "3                    1.00                    0.00   \n",
+       "4                    1.00                    0.00   \n",
+       "\n",
+       "   dst_host_same_src_port_rate  dst_host_srv_diff_host_rate  \\\n",
+       "0                         0.17                         0.00   \n",
+       "1                         0.88                         0.00   \n",
+       "2                         0.00                         0.00   \n",
+       "3                         0.03                         0.04   \n",
+       "4                         0.00                         0.00   \n",
+       "\n",
+       "   dst_host_serror_rate  dst_host_srv_serror_rate  dst_host_rerror_rate  \\\n",
+       "0                  0.00                      0.00                  0.05   \n",
+       "1                  0.00                      0.00                  0.00   \n",
+       "2                  1.00                      1.00                  0.00   \n",
+       "3                  0.03                      0.01                  0.00   \n",
+       "4                  0.00                      0.00                  0.00   \n",
+       "\n",
+       "   dst_host_srv_rerror_rate  \n",
+       "0                      0.00  \n",
+       "1                      0.00  \n",
+       "2                      0.00  \n",
+       "3                      0.01  \n",
+       "4                      0.00  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(data_file)\n",
     "print(\"Labels for first few rows:\")\n",
@@ -139,12 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9cffb270-0cb5-4f84-83ea-e8f195dae0fc",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num Training samples:  14851,  Num Testing samples:  133666\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(df.iloc[:, :-1].values, df.iloc[:, -1].values,\n",
     "                                                    test_size = 0.9, \n",
@@ -164,12 +412,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bad7ee0b-7318-4a2f-a681-81bac98547f5",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 100.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the XGBoost classifier with training data\n",
     "classifier = XGBClassifier()\n",
@@ -197,12 +453,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "09bf8897-5807-4899-bf48-4dfbdfcca7fb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- checks:\n",
+      "\t- type:\n",
+      "\t\tAnomaly.CONCEPT_DRIFT\n",
+      "\t- algorithm:\n",
+      "\t\tDataDriftAlgo.DDM\n",
+      "- retraining_folder:\n",
+      "\tuptrain_smart_data\n",
+      "- st_logging:\n",
+      "\tTrue\n"
+     ]
+    }
+   ],
    "source": [
     "cfg = {\n",
     "    # Checks to identify concept drift\n",
@@ -222,12 +494,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "474b25b9-c0cd-4cfb-bb34-f2e5a0eb5069",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting the folder:  uptrain_smart_data\n",
+      "Deleting the folder:  uptrain_logs\n",
+      "\n",
+      "  You can now view your Streamlit app in your browser.\n",
+      "\n",
+      "  Local URL: http://localhost:8502\n",
+      "  Network URL: http://192.168.6.64:8502\n",
+      "\n",
+      "Drift detected with DDM at time: 111298!!!\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the UpTrain framework\n",
     "framework = uptrain.Framework(cfg)\n",
@@ -311,12 +599,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1322464e-0917-4f68-aa4c-214a9b6fa7c2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- checks:\n",
+      "\t- type:\n",
+      "\t\tAnomaly.CUSTOM_MONITOR\n",
+      "\t- initialize_func:\n",
+      "\t\t<function custom_initialize_func at 0x7f9e608f65f0>\n",
+      "\t- check_func:\n",
+      "\t\t<function custom_check_func at 0x7f9e608f71c0>\n",
+      "\t- need_gt:\n",
+      "\t\tTrue\n",
+      "\t- type:\n",
+      "\t\tAnomaly.CONCEPT_DRIFT\n",
+      "\t- algorithm:\n",
+      "\t\tDataDriftAlgo.DDM\n",
+      "- retraining_folder:\n",
+      "\tuptrain_smart_data\n",
+      "- st_logging:\n",
+      "\tTrue\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Defining a custom drift metric to check if accuracy drops beyond a threshold.\n",
@@ -392,12 +704,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "63118254-37a2-4ec0-9a9d-16a4c3e376d1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting the folder:  uptrain_smart_data\n",
+      "Deleting the folder:  uptrain_logs\n",
+      "Concept drift detected with custom metric at time: 111000!!!\n",
+      "Drift detected with DDM at time: 111298!!!\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the UpTrain framework\n",
     "framework = uptrain.Framework(cfg)\n",
@@ -471,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
