add null cases in dataset generation, fix minor bug

--- a/examples/llm_bert/run.ipynb
+++ b/examples/llm_bert/run.ipynb
@@ -549,6 +549,8 @@
         }
       ],
       "source": [
+        "retrained_model_outputs = [top_k_tokens(model, tokenizer, text) for text in testing_texts]\n",
+        "\n",
         "for i in range(len(testing_texts)):\n",
         "    print('                Text:', testing_texts[i])\n",
         "    print(' Original Top tokens:', original_model_outputs[i][:5])\n",
