--- a/examples/llm_bert/run.ipynb
+++ b/examples/llm_bert/run.ipynb
@@ -69,7 +69,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install torch 'transformers[torch]' datasets ipywidgets nltk matplotlib==3.6.0 seaborn uptrain"
+        "# !pip install torch 'transformers[torch]' datasets ipywidgets nltk matplotlib==3.6.0 seaborn uptrain"
       ]
     },
     {
@@ -584,8 +584,7 @@
         "for i in range(len(testing_texts)):\n",
         "    print('                Text:', testing_texts[i])\n",
         "    print(' Original Top tokens:', original_model_outputs[i][:5])\n",
-        "    print('Retrained Top tokens:', retrained_model_outputs[i][:5])\n",
-        "    print()"
+        "    print('Retrained Top tokens:', retrained_model_outputs[i][:5])"
       ]
     },
     {
@@ -603,13 +602,14 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "3d9242d8",
       "metadata": {
         "id": "3d9242d8"
       },
       "source": [
-        "#### Visualizing Loss, Perplexity and Mask Prediction Confidence"
+        "## Visualizing Loss, Perplexity and Mask Prediction Confidence"
       ]
     },
     {
@@ -857,16 +857,6 @@
         "    plt.show()\n",
         "    print('\\n')"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "QCJFFulBGhoR",
-      "metadata": {
-        "id": "QCJFFulBGhoR"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
