'modify st_logging': True TO 'logging_args': {'st_logging': True},

--- a/examples/finetuning_LLM/run.ipynb
+++ b/examples/finetuning_LLM/run.ipynb
@@ -401,7 +401,7 @@
         "    # are not retraining yet\n",
         "    \"retrain_after\": 10000000000,\n",
         "\n",
-        "    \"st_logging\": True\n",
+        "    \"logging_args\": {\"st_logging\": True},\n",
         "}\n",
         "\n",
         "dashboard_name = \"llm_bert_example\"\n",
