--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -487,7 +487,7 @@
     "    \"retraining_folder\": 'uptrain_smart_data',\n",
     "    \n",
     "    # Enable streamlit logging to visualize model's performance\n",
-    "    \"st_logging\": True,\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}\n",
     "pretty(cfg)"
    ]
@@ -697,7 +697,7 @@
     "    \"retraining_folder\": 'uptrain_smart_data',\n",
     "    \n",
     "    # Enable streamlit logging to visualize model's performance\n",
-    "    \"st_logging\": True,\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}\n",
     "pretty(cfg)"
    ]
