--- a/examples/human_orientation_classification/deepdive_examples/uptrain_check_all.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_check_all.ipynb
@@ -401,7 +401,7 @@
     "    \"cluster_visualize_func\": plot_all_cluster,\n",
     "    \n",
     "    # Turn on tensorboard logging\n",
-    "    \"st_logging\": True,\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}"
    ]
   },
