--- a/examples/human_orientation_classification/deepdive_examples/uptrain_concept_drift.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_concept_drift.ipynb
@@ -218,7 +218,7 @@
     "        'algorithm': uptrain.DataDriftAlgo.DDM\n",
     "    }],\n",
     "    \"data_identifier\": \"id\",\n",
-    "    \"st_logging\": True,\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "    \"retraining_folder\": \"uptrain_smart_data_data_integrity\",\n",
     "}"
    ]
