--- a/examples/human_orientation_classification/run.ipynb
+++ b/examples/human_orientation_classification/run.ipynb
@@ -631,7 +631,7 @@
     "    # A function to visualize clusters in the data\n",
     "    \"cluster_visualize_func\": plot_all_cluster,\n",
     "    \n",
-    "    \"st_logging\": True\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}\n",
     "\n",
     "# Initialize the UpTrain framework object with config \n",
