--- a/examples/ride_time_estimation/run.ipynb
+++ b/examples/ride_time_estimation/run.ipynb
@@ -172,7 +172,7 @@
     "        \"integrity_type\": \"greater_than\",\n",
     "        \"threshold\": 1\n",
     "    }],\n",
-    "    \"st_logging\": True\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}\n",
     "framework = uptrain.Framework(cfg_dict=cfg)\n",
     "\n",
