--- a/examples/shopping_cart_recommendation/run.ipynb
+++ b/examples/shopping_cart_recommendation/run.ipynb
@@ -333,7 +333,7 @@
     "        }\n",
     "    ], \n",
     "    \"retraining_folder\": 'uptrain_smart_data', \n",
-    "    \"st_logging\": True,\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}\n",
     "\n",
     "framework = uptrain.Framework(cfg)"
