--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -512,7 +512,7 @@
     "        'initial_dataset': \"ref_dataset.json\",\n",
     "    }\n",
     "    ],\n",
-    "    \"st_logging\": True,\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}"
    ]
   },
@@ -694,7 +694,7 @@
     "        \"initial_skip\": 50,\n",
     "        \"emd_threshold\": 2\n",
     "    }],\n",
-    "    \"st_logging\": True,\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}"
    ]
   },
@@ -879,7 +879,7 @@
     "        'signal_formulae': uptrain.Signal(\"Incorrect Grammer\", grammar_check_func) \n",
     "            | (uptrain.Signal(\"Sentiment Score\", negative_sentiment_score_func) > 0.5)\n",
     "    }],\n",
-    "    \"st_logging\": True,\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}"
    ]
   },
