--- a/examples/human_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
@@ -243,7 +243,7 @@
     "        \"threshold\": 50\n",
     "    },],\n",
     "    \"retraining_folder\": \"uptrain_smart_data_data_integrity\",\n",
-    "    \"st_logging\": True\n",
+    "    \"logging_args\": {\"st_logging\": True},\n",
     "}"
    ]
   },
