remove unnecessary check in example

--- a/examples/finetuning_LLM/run.ipynb
+++ b/examples/finetuning_LLM/run.ipynb
@@ -284,10 +284,7 @@
     "print(df)\n",
     "\n",
     "df.to_csv(synthesized_data_csv)\n",
-    "create_dataset_from_csv(synthesized_data_csv, 'text', synthesized_data_json)\n",
-    "\n",
-    "with open(synthesized_data_json) as file:\n",
-    "    dataset = json.loads(file.read())"
+    "create_dataset_from_csv(synthesized_data_csv, 'text', synthesized_data_json)"
    ]
   },
   {
@@ -441,10 +438,7 @@
     "for index, sample in enumerate(dataset['data']):\n",
     "    if index % 500 == 0:\n",
     "        print(f'Processed {index} samples')\n",
-    "    text = sample['text']\n",
-    "    if text == 'nan':\n",
-    "        text = None\n",
-    "    inputs = {'text': [text]}\n",
+    "    inputs = {'text': [sample['text']]}\n",
     "    framework.log(inputs = inputs, outputs = None)\n",
     "\n",
     "retraining_csv = uptrain_save_fold_name + '/1/smart_data.csv'\n",
